parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANDEQUAL
    ASIGNACION
    CASE
    COMENTARIO
    CURRENT
    DEQUEUE
    DOSPUNTOS
    ELSE
    ELSEIF
    ENQUEUE
    LLAVEDER
    NEXT
    POP
    PUNTO
    REWIND
    SIGNOID
    SWITCH
    VALID

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> asignacion
Rule 2     sentencias -> echo
Rule 3     sentencias -> funcion
Rule 4     sentencias -> print
Rule 5     sentencias -> operadorAritmetico
Rule 6     sentencias -> return
Rule 7     sentencias -> estructuras
Rule 8     sentencias -> estructurasControl
Rule 9     valores -> valor
Rule 10    valores -> valor COMA valores
Rule 11    NUMERO -> ENTERO
Rule 12    NUMERO -> FLOTANTE
Rule 13    valor -> NUMERO
Rule 14    valor -> CADENA
Rule 15    valor -> BOOLEAN
Rule 16    valor -> IDENTIFICADOR
Rule 17    comparadorNum -> MAYORQUE
Rule 18    comparadorNum -> MAYORIGUALQUE
Rule 19    comparadorNum -> MENORQUE
Rule 20    comparadorNum -> MENORIGUALQUE
Rule 21    comparador -> IDENTICO
Rule 22    comparador -> NOIDENTICO
Rule 23    comparador -> IGUAL
Rule 24    variables -> NUMERO
Rule 25    variables -> IDENTIFICADOR
Rule 26    comparaciones -> comparacion
Rule 27    comparaciones -> comparacion operadores comparaciones
Rule 28    comparacion -> variables comparadorNum variables
Rule 29    comparacion -> valor comparador valor
Rule 30    incrementoDecremento -> INCREMENTO
Rule 31    incrementoDecremento -> DECREMENTO
Rule 32    incrementoDecremento -> SUMA ENTERO
Rule 33    incrementoDecremento -> RESTA ENTERO
Rule 34    while -> WHILE PARENIZ comparaciones PARENDER LLAVEIZ
Rule 35    for -> FOR PARENIZ IDENTIFICADOR ASIGNAR ENTERO PUNTOCOMA IDENTIFICADOR comparadorNum ENTERO PUNTOCOMA IDENTIFICADOR incrementoDecremento PARENDER LLAVEIZ
Rule 36    if -> IF PARENIZ comparaciones PARENDER LLAVEIZ
Rule 37    if -> IF PARENIZ IDENTIFICADOR PARENDER LLAVEIZ
Rule 38    operadores -> OPERADOR
Rule 39    operadores -> AND
Rule 40    operadores -> OR
Rule 41    asignacion -> IDENTIFICADOR ASIGNAR valor PUNTOCOMA
Rule 42    print -> PRINT PARENIZ valores PARENDER PUNTOCOMA
Rule 43    print -> PRINT valor PUNTOCOMA
Rule 44    print -> PRINT PARENIZ PARENDER PUNTOCOMA
Rule 45    echo -> ECHO valores PUNTOCOMA
Rule 46    operadorAritmetico -> SUMA
Rule 47    operadorAritmetico -> RESTA
Rule 48    operadorAritmetico -> MULT
Rule 49    operadorAritmetico -> DIVISION
Rule 50    operadorAritmetico -> DIVISIONENTERA
Rule 51    operadorAritmetico -> MODULO
Rule 52    operadorAritmetico -> POTENCIA
Rule 53    funcion -> FUNCTION NAMEFUNCTION PARENIZ parametro PARENDER LLAVEIZ
Rule 54    parametro -> IDENTIFICADOR
Rule 55    parametro -> IDENTIFICADOR COMA parametro
Rule 56    funcion -> NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
Rule 57    funcion -> IDENTIFICADOR ASIGNAR NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
Rule 58    return -> RETURN IDENTIFICADOR PUNTOCOMA
Rule 59    estructuras -> queue
Rule 60    estructuras -> stack
Rule 61    estructuras -> push
Rule 62    estructuras -> array
Rule 63    estructurasControl -> while
Rule 64    estructurasControl -> for
Rule 65    estructurasControl -> if
Rule 66    queue -> IDENTIFICADOR ASIGNAR NEW QUEUE PARENIZ PARENDER PUNTOCOMA
Rule 67    push -> IDENTIFICADOR FLECHASIMPLE PUSH PARENIZ valor PARENDER PUNTOCOMA
Rule 68    stack -> IDENTIFICADOR ASIGNAR NEW STACK PARENIZ PARENDER PUNTOCOMA
Rule 69    array -> IDENTIFICADOR ASIGNAR ARRAY PARENIZ valores PARENDER PUNTOCOMA
Rule 70    array -> IDENTIFICADOR ASIGNAR CORCHETEIZ valores CORCHETEDER PUNTOCOMA

Terminals, with rules where they appear

AND                  : 39
ANDEQUAL             : 
ARRAY                : 69
ASIGNACION           : 
ASIGNAR              : 35 41 57 66 68 69 70
BOOLEAN              : 15
CADENA               : 14
CASE                 : 
COMA                 : 10 55
COMENTARIO           : 
CORCHETEDER          : 70
CORCHETEIZ           : 70
CURRENT              : 
DECREMENTO           : 31
DEQUEUE              : 
DIVISION             : 49
DIVISIONENTERA       : 50
DOSPUNTOS            : 
ECHO                 : 45
ELSE                 : 
ELSEIF               : 
ENQUEUE              : 
ENTERO               : 11 32 33 35 35
FLECHASIMPLE         : 67
FLOTANTE             : 12
FOR                  : 35
FUNCTION             : 53
IDENTICO             : 21
IDENTIFICADOR        : 16 25 35 35 35 37 41 54 55 57 58 66 67 68 69 70
IF                   : 36 37
IGUAL                : 23
INCREMENTO           : 30
LLAVEDER             : 
LLAVEIZ              : 34 35 36 37 53
MAYORIGUALQUE        : 18
MAYORQUE             : 17
MENORIGUALQUE        : 20
MENORQUE             : 19
MODULO               : 51
MULT                 : 48
NAMEFUNCTION         : 53 56 57
NEW                  : 66 68
NEXT                 : 
NOIDENTICO           : 22
OPERADOR             : 38
OR                   : 40
PARENDER             : 34 35 36 37 42 44 53 56 57 66 67 68 69
PARENIZ              : 34 35 36 37 42 44 53 56 57 66 67 68 69
POP                  : 
POTENCIA             : 52
PRINT                : 42 43 44
PUNTO                : 
PUNTOCOMA            : 35 35 41 42 43 44 45 56 57 58 66 67 68 69 70
PUSH                 : 67
QUEUE                : 66
RESTA                : 33 47
RETURN               : 58
REWIND               : 
SIGNOID              : 
STACK                : 68
SUMA                 : 32 46
SWITCH               : 
VALID                : 
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

NUMERO               : 13 24
array                : 62
asignacion           : 1
comparacion          : 26 27
comparaciones        : 27 34 36
comparador           : 29
comparadorNum        : 28 35
echo                 : 2
estructuras          : 7
estructurasControl   : 8
for                  : 64
funcion              : 3
if                   : 65
incrementoDecremento : 35
operadorAritmetico   : 5
operadores           : 27
parametro            : 53 55 56 57
print                : 4
push                 : 61
queue                : 59
return               : 6
sentencias           : 0
stack                : 60
valor                : 9 10 29 29 41 43 67
valores              : 10 42 45 69 70
variables            : 28 28
while                : 63

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . asignacion
    (2) sentencias -> . echo
    (3) sentencias -> . funcion
    (4) sentencias -> . print
    (5) sentencias -> . operadorAritmetico
    (6) sentencias -> . return
    (7) sentencias -> . estructuras
    (8) sentencias -> . estructurasControl
    (41) asignacion -> . IDENTIFICADOR ASIGNAR valor PUNTOCOMA
    (45) echo -> . ECHO valores PUNTOCOMA
    (53) funcion -> . FUNCTION NAMEFUNCTION PARENIZ parametro PARENDER LLAVEIZ
    (56) funcion -> . NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
    (57) funcion -> . IDENTIFICADOR ASIGNAR NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
    (42) print -> . PRINT PARENIZ valores PARENDER PUNTOCOMA
    (43) print -> . PRINT valor PUNTOCOMA
    (44) print -> . PRINT PARENIZ PARENDER PUNTOCOMA
    (46) operadorAritmetico -> . SUMA
    (47) operadorAritmetico -> . RESTA
    (48) operadorAritmetico -> . MULT
    (49) operadorAritmetico -> . DIVISION
    (50) operadorAritmetico -> . DIVISIONENTERA
    (51) operadorAritmetico -> . MODULO
    (52) operadorAritmetico -> . POTENCIA
    (58) return -> . RETURN IDENTIFICADOR PUNTOCOMA
    (59) estructuras -> . queue
    (60) estructuras -> . stack
    (61) estructuras -> . push
    (62) estructuras -> . array
    (63) estructurasControl -> . while
    (64) estructurasControl -> . for
    (65) estructurasControl -> . if
    (66) queue -> . IDENTIFICADOR ASIGNAR NEW QUEUE PARENIZ PARENDER PUNTOCOMA
    (68) stack -> . IDENTIFICADOR ASIGNAR NEW STACK PARENIZ PARENDER PUNTOCOMA
    (67) push -> . IDENTIFICADOR FLECHASIMPLE PUSH PARENIZ valor PARENDER PUNTOCOMA
    (69) array -> . IDENTIFICADOR ASIGNAR ARRAY PARENIZ valores PARENDER PUNTOCOMA
    (70) array -> . IDENTIFICADOR ASIGNAR CORCHETEIZ valores CORCHETEDER PUNTOCOMA
    (34) while -> . WHILE PARENIZ comparaciones PARENDER LLAVEIZ
    (35) for -> . FOR PARENIZ IDENTIFICADOR ASIGNAR ENTERO PUNTOCOMA IDENTIFICADOR comparadorNum ENTERO PUNTOCOMA IDENTIFICADOR incrementoDecremento PARENDER LLAVEIZ
    (36) if -> . IF PARENIZ comparaciones PARENDER LLAVEIZ
    (37) if -> . IF PARENIZ IDENTIFICADOR PARENDER LLAVEIZ

    IDENTIFICADOR   shift and go to state 10
    ECHO            shift and go to state 11
    FUNCTION        shift and go to state 12
    NAMEFUNCTION    shift and go to state 13
    PRINT           shift and go to state 14
    SUMA            shift and go to state 15
    RESTA           shift and go to state 16
    MULT            shift and go to state 17
    DIVISION        shift and go to state 18
    DIVISIONENTERA  shift and go to state 19
    MODULO          shift and go to state 20
    POTENCIA        shift and go to state 21
    RETURN          shift and go to state 22
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    IF              shift and go to state 32

    sentencias                     shift and go to state 1
    asignacion                     shift and go to state 2
    echo                           shift and go to state 3
    funcion                        shift and go to state 4
    print                          shift and go to state 5
    operadorAritmetico             shift and go to state 6
    return                         shift and go to state 7
    estructuras                    shift and go to state 8
    estructurasControl             shift and go to state 9
    queue                          shift and go to state 23
    stack                          shift and go to state 24
    push                           shift and go to state 25
    array                          shift and go to state 26
    while                          shift and go to state 27
    for                            shift and go to state 28
    if                             shift and go to state 29

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> asignacion .

    $end            reduce using rule 1 (sentencias -> asignacion .)


state 3

    (2) sentencias -> echo .

    $end            reduce using rule 2 (sentencias -> echo .)


state 4

    (3) sentencias -> funcion .

    $end            reduce using rule 3 (sentencias -> funcion .)


state 5

    (4) sentencias -> print .

    $end            reduce using rule 4 (sentencias -> print .)


state 6

    (5) sentencias -> operadorAritmetico .

    $end            reduce using rule 5 (sentencias -> operadorAritmetico .)


state 7

    (6) sentencias -> return .

    $end            reduce using rule 6 (sentencias -> return .)


state 8

    (7) sentencias -> estructuras .

    $end            reduce using rule 7 (sentencias -> estructuras .)


state 9

    (8) sentencias -> estructurasControl .

    $end            reduce using rule 8 (sentencias -> estructurasControl .)


state 10

    (41) asignacion -> IDENTIFICADOR . ASIGNAR valor PUNTOCOMA
    (57) funcion -> IDENTIFICADOR . ASIGNAR NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
    (66) queue -> IDENTIFICADOR . ASIGNAR NEW QUEUE PARENIZ PARENDER PUNTOCOMA
    (68) stack -> IDENTIFICADOR . ASIGNAR NEW STACK PARENIZ PARENDER PUNTOCOMA
    (67) push -> IDENTIFICADOR . FLECHASIMPLE PUSH PARENIZ valor PARENDER PUNTOCOMA
    (69) array -> IDENTIFICADOR . ASIGNAR ARRAY PARENIZ valores PARENDER PUNTOCOMA
    (70) array -> IDENTIFICADOR . ASIGNAR CORCHETEIZ valores CORCHETEDER PUNTOCOMA

    ASIGNAR         shift and go to state 33
    FLECHASIMPLE    shift and go to state 34


state 11

    (45) echo -> ECHO . valores PUNTOCOMA
    (9) valores -> . valor
    (10) valores -> . valor COMA valores
    (13) valor -> . NUMERO
    (14) valor -> . CADENA
    (15) valor -> . BOOLEAN
    (16) valor -> . IDENTIFICADOR
    (11) NUMERO -> . ENTERO
    (12) NUMERO -> . FLOTANTE

    CADENA          shift and go to state 38
    BOOLEAN         shift and go to state 39
    IDENTIFICADOR   shift and go to state 40
    ENTERO          shift and go to state 41
    FLOTANTE        shift and go to state 42

    valores                        shift and go to state 35
    valor                          shift and go to state 36
    NUMERO                         shift and go to state 37

state 12

    (53) funcion -> FUNCTION . NAMEFUNCTION PARENIZ parametro PARENDER LLAVEIZ

    NAMEFUNCTION    shift and go to state 43


state 13

    (56) funcion -> NAMEFUNCTION . PARENIZ parametro PARENDER PUNTOCOMA

    PARENIZ         shift and go to state 44


state 14

    (42) print -> PRINT . PARENIZ valores PARENDER PUNTOCOMA
    (43) print -> PRINT . valor PUNTOCOMA
    (44) print -> PRINT . PARENIZ PARENDER PUNTOCOMA
    (13) valor -> . NUMERO
    (14) valor -> . CADENA
    (15) valor -> . BOOLEAN
    (16) valor -> . IDENTIFICADOR
    (11) NUMERO -> . ENTERO
    (12) NUMERO -> . FLOTANTE

    PARENIZ         shift and go to state 45
    CADENA          shift and go to state 38
    BOOLEAN         shift and go to state 39
    IDENTIFICADOR   shift and go to state 40
    ENTERO          shift and go to state 41
    FLOTANTE        shift and go to state 42

    valor                          shift and go to state 46
    NUMERO                         shift and go to state 37

state 15

    (46) operadorAritmetico -> SUMA .

    $end            reduce using rule 46 (operadorAritmetico -> SUMA .)


state 16

    (47) operadorAritmetico -> RESTA .

    $end            reduce using rule 47 (operadorAritmetico -> RESTA .)


state 17

    (48) operadorAritmetico -> MULT .

    $end            reduce using rule 48 (operadorAritmetico -> MULT .)


state 18

    (49) operadorAritmetico -> DIVISION .

    $end            reduce using rule 49 (operadorAritmetico -> DIVISION .)


state 19

    (50) operadorAritmetico -> DIVISIONENTERA .

    $end            reduce using rule 50 (operadorAritmetico -> DIVISIONENTERA .)


state 20

    (51) operadorAritmetico -> MODULO .

    $end            reduce using rule 51 (operadorAritmetico -> MODULO .)


state 21

    (52) operadorAritmetico -> POTENCIA .

    $end            reduce using rule 52 (operadorAritmetico -> POTENCIA .)


state 22

    (58) return -> RETURN . IDENTIFICADOR PUNTOCOMA

    IDENTIFICADOR   shift and go to state 47


state 23

    (59) estructuras -> queue .

    $end            reduce using rule 59 (estructuras -> queue .)


state 24

    (60) estructuras -> stack .

    $end            reduce using rule 60 (estructuras -> stack .)


state 25

    (61) estructuras -> push .

    $end            reduce using rule 61 (estructuras -> push .)


state 26

    (62) estructuras -> array .

    $end            reduce using rule 62 (estructuras -> array .)


state 27

    (63) estructurasControl -> while .

    $end            reduce using rule 63 (estructurasControl -> while .)


state 28

    (64) estructurasControl -> for .

    $end            reduce using rule 64 (estructurasControl -> for .)


state 29

    (65) estructurasControl -> if .

    $end            reduce using rule 65 (estructurasControl -> if .)


state 30

    (34) while -> WHILE . PARENIZ comparaciones PARENDER LLAVEIZ

    PARENIZ         shift and go to state 48


state 31

    (35) for -> FOR . PARENIZ IDENTIFICADOR ASIGNAR ENTERO PUNTOCOMA IDENTIFICADOR comparadorNum ENTERO PUNTOCOMA IDENTIFICADOR incrementoDecremento PARENDER LLAVEIZ

    PARENIZ         shift and go to state 49


state 32

    (36) if -> IF . PARENIZ comparaciones PARENDER LLAVEIZ
    (37) if -> IF . PARENIZ IDENTIFICADOR PARENDER LLAVEIZ

    PARENIZ         shift and go to state 50


state 33

    (41) asignacion -> IDENTIFICADOR ASIGNAR . valor PUNTOCOMA
    (57) funcion -> IDENTIFICADOR ASIGNAR . NAMEFUNCTION PARENIZ parametro PARENDER PUNTOCOMA
    (66) queue -> IDENTIFICADOR ASIGNAR . NEW QUEUE PARENIZ PARENDER PUNTOCOMA
    (68) stack -> IDENTIFICADOR ASIGNAR . NEW STACK PARENIZ PARENDER PUNTOCOMA
    (69) array -> IDENTIFICADOR ASIGNAR . ARRAY PARENIZ valores PARENDER PUNTOCOMA
    (70) array -> IDENTIFICADOR ASIGNAR . CORCHETEIZ valores CORCHETEDER PUNTOCOMA
    (13) valor -> . NUMERO
    (14) valor -> . CADENA
    (15) valor -> . BOOLEAN
    (16) valor -> . IDENTIFICADOR
    (11) NUMERO -> . ENTERO
    (12) NUMERO -> . FLOTANTE

    NAMEFUNCTION    shift and go to state 52
    NEW             shift and go to state 53
    ARRAY           shift and go to state 54
    CORCHETEIZ      shift and go to state 55
    CADENA          shift and go to state 38
    BOOLEAN         shift and go to state 39
    IDENTIFICADOR   shift and go to state 40
    ENTERO          shift and go to state 41
    FLOTANTE        shift and go to state 42

    valor                          shift and go to state 51
    NUMERO                         shift and go to state 37

state 34

    (67) push -> IDENTIFICADOR FLECHASIMPLE . PUSH PARENIZ valor PARENDER PUNTOCOMA

    PUSH            shift and go to state 56


state 35

    (45) echo -> ECHO valores . PUNTOCOMA

    PUNTOCOMA       shift and go to state 57


state 36

    (9) valores -> valor .
    (10) valores -> valor . COMA valores

    PUNTOCOMA       reduce using rule 9 (valores -> valor .)
    PARENDER        reduce using rule 9 (valores -> valor .)
    CORCHETEDER     reduce using rule 9 (valores -> valor .)
    COMA            shift and go to state 58


state 37

    (13) valor -> NUMERO .

    COMA            reduce using rule 13 (valor -> NUMERO .)
    PUNTOCOMA       reduce using rule 13 (valor -> NUMERO .)
    PARENDER        reduce using rule 13 (valor -> NUMERO .)
    CORCHETEDER     reduce using rule 13 (valor -> NUMERO .)
    OPERADOR        reduce using rule 13 (valor -> NUMERO .)
    AND             reduce using rule 13 (valor -> NUMERO .)
    OR              reduce using rule 13 (valor -> NUMERO .)


state 38

    (14) valor -> CADENA .

    COMA            reduce using rule 14 (valor -> CADENA .)
    PUNTOCOMA       reduce using rule 14 (valor -> CADENA .)
    PARENDER        reduce using rule 14 (valor -> CADENA .)
    IDENTICO        reduce using rule 14 (valor -> CADENA .)
    NOIDENTICO      reduce using rule 14 (valor -> CADENA .)
    IGUAL           reduce using rule 14 (valor -> CADENA .)
    CORCHETEDER     reduce using rule 14 (valor -> CADENA .)
    OPERADOR        reduce using rule 14 (valor -> CADENA .)
    AND             reduce using rule 14 (valor -> CADENA .)
    OR              reduce using rule 14 (valor -> CADENA .)


state 39

    (15) valor -> BOOLEAN .

    COMA            reduce using rule 15 (valor -> BOOLEAN .)
    PUNTOCOMA       reduce using rule 15 (valor -> BOOLEAN .)
    PARENDER        reduce using rule 15 (valor -> BOOLEAN .)
    IDENTICO        reduce using rule 15 (valor -> BOOLEAN .)
    NOIDENTICO      reduce using rule 15 (valor -> BOOLEAN .)
    IGUAL           reduce using rule 15 (valor -> BOOLEAN .)
    CORCHETEDER     reduce using rule 15 (valor -> BOOLEAN .)
    OPERADOR        reduce using rule 15 (valor -> BOOLEAN .)
    AND             reduce using rule 15 (valor -> BOOLEAN .)
    OR              reduce using rule 15 (valor -> BOOLEAN .)


state 40

    (16) valor -> IDENTIFICADOR .

    COMA            reduce using rule 16 (valor -> IDENTIFICADOR .)
    PUNTOCOMA       reduce using rule 16 (valor -> IDENTIFICADOR .)
    PARENDER        reduce using rule 16 (valor -> IDENTIFICADOR .)
    CORCHETEDER     reduce using rule 16 (valor -> IDENTIFICADOR .)
    OPERADOR        reduce using rule 16 (valor -> IDENTIFICADOR .)
    AND             reduce using rule 16 (valor -> IDENTIFICADOR .)
    OR              reduce using rule 16 (valor -> IDENTIFICADOR .)


state 41

    (11) NUMERO -> ENTERO .

    COMA            reduce using rule 11 (NUMERO -> ENTERO .)
    PUNTOCOMA       reduce using rule 11 (NUMERO -> ENTERO .)
    PARENDER        reduce using rule 11 (NUMERO -> ENTERO .)
    MAYORQUE        reduce using rule 11 (NUMERO -> ENTERO .)
    MAYORIGUALQUE   reduce using rule 11 (NUMERO -> ENTERO .)
    MENORQUE        reduce using rule 11 (NUMERO -> ENTERO .)
    MENORIGUALQUE   reduce using rule 11 (NUMERO -> ENTERO .)
    IDENTICO        reduce using rule 11 (NUMERO -> ENTERO .)
    NOIDENTICO      reduce using rule 11 (NUMERO -> ENTERO .)
    IGUAL           reduce using rule 11 (NUMERO -> ENTERO .)
    CORCHETEDER     reduce using rule 11 (NUMERO -> ENTERO .)
    OPERADOR        reduce using rule 11 (NUMERO -> ENTERO .)
    AND             reduce using rule 11 (NUMERO -> ENTERO .)
    OR              reduce using rule 11 (NUMERO -> ENTERO .)


state 42

    (12) NUMERO -> FLOTANTE .

    COMA            reduce using rule 12 (NUMERO -> FLOTANTE .)
    PUNTOCOMA       reduce using rule 12 (NUMERO -> FLOTANTE .)
    PARENDER        reduce using rule 12 (NUMERO -> FLOTANTE .)
    MAYORQUE        reduce using rule 12 (NUMERO -> FLOTANTE .)
    MAYORIGUALQUE   reduce using rule 12 (NUMERO -> FLOTANTE .)
    MENORQUE        reduce using rule 12 (NUMERO -> FLOTANTE .)
    MENORIGUALQUE   reduce using rule 12 (NUMERO -> FLOTANTE .)
    IDENTICO        reduce using rule 12 (NUMERO -> FLOTANTE .)
    NOIDENTICO      reduce using rule 12 (NUMERO -> FLOTANTE .)
    IGUAL           reduce using rule 12 (NUMERO -> FLOTANTE .)
    CORCHETEDER     reduce using rule 12 (NUMERO -> FLOTANTE .)
    OPERADOR        reduce using rule 12 (NUMERO -> FLOTANTE .)
    AND             reduce using rule 12 (NUMERO -> FLOTANTE .)
    OR              reduce using rule 12 (NUMERO -> FLOTANTE .)


state 43

    (53) funcion -> FUNCTION NAMEFUNCTION . PARENIZ parametro PARENDER LLAVEIZ

    PARENIZ         shift and go to state 59


state 44

    (56) funcion -> NAMEFUNCTION PARENIZ . parametro PARENDER PUNTOCOMA
    (54) parametro -> . IDENTIFICADOR
    (55) parametro -> . IDENTIFICADOR COMA parametro

    IDENTIFICADOR   shift and go to state 61

    parametro                      shift and go to state 60

state 45

    (42) print -> PRINT PARENIZ . valores PARENDER PUNTOCOMA
    (44) print -> PRINT PARENIZ . PARENDER PUNTOCOMA
    (9) valores -> . valor
    (10) valores -> . valor COMA valores
    (13) valor -> . NUMERO
    (14) valor -> . CADENA
    (15) valor -> . BOOLEAN
    (16) valor -> . IDENTIFICADOR
    (11) NUMERO -> . ENTERO
    (12) NUMERO -> . FLOTANTE

    PARENDER        shift and go to state 63
    CADENA          shift and go to state 38
    BOOLEAN         shift and go to state 39
    IDENTIFICADOR   shift and go to state 40
    ENTERO          shift and go to state 41
    FLOTANTE        shift and go to state 42

    valores                        shift and go to state 62
    valor                          shift and go to state 36
    NUMERO                         shift and go to state 37

state 46

    (43) print -> PRINT valor . PUNTOCOMA

    PUNTOCOMA       shift and go to state 64


state 47

    (58) return -> RETURN IDENTIFICADOR . PUNTOCOMA

    PUNTOCOMA       shift and go to state 65


state 48

    (34) while -> WHILE PARENIZ . comparaciones PARENDER LLAVEIZ
    (26) comparaciones -> . comparacion
    (27) comparaciones -> . comparacion operadores comparaciones
    (28) comparacion -> . variables comparadorNum variables
    (29) comparacion -> . valor comparador valor
    (24) variables -> . NUMERO
    (25) variables -> . IDENTIFICADOR
    (13) valor -> . NUMERO
    (14) valor -> . CADENA
    (15) valor -> . BOOLEAN
    (16) valor -> . IDENTIFICADOR
    (11) NUMERO -> . ENTERO
    (12) NUMERO -> . FLOTANTE

    IDENTIFICADOR   shift and go to state 71
    CADENA          shift and go to state 38
    BOOLEAN         shift and go to state 39
    ENTERO          shift and go to state 41
    FLOTANTE        shift and go to state 42

    comparaciones                  shift and go to state 66
    comparacion                    shift and go to state 67
    variables                      shift and go to state 68
    valor                          shift and go to state 69
    NUMERO                         shift and go to state 70

state 49

    (35) for -> FOR PARENIZ . IDENTIFICADOR ASIGNAR ENTERO PUNTOCOMA IDENTIFICADOR comparadorNum ENTERO PUNTOCOMA IDENTIFICADOR incrementoDecremento PARENDER LLAVEIZ

    IDENTIFICADOR   shift and go to state 72


state 50

    (36) if -> IF PARENIZ . comparaciones PARENDER LLAVEIZ
    (37) if -> IF PARENIZ . IDENTIFICADOR PARENDER LLAVEIZ
    (26) comparaciones -> . comparacion
    (27) comparaciones -> . comparacion operadores comparaciones
    (28) comparacion -> . variables comparadorNum variables
    (29) comparacion -> . valor comparador valor
    (24) variables -> . NUMERO
    (25) variables -> . IDENTIFICADOR
    (13) valor -> . NUMERO
    (14) valor -> . CADENA
    (15) valor -> . BOOLEAN
    (16) valor -> . IDENTIFICADOR
    (11) NUMERO -> . ENTERO
    (12) NUMERO -> . FLOTANTE

    IDENTIFICADOR   shift and go to state 74
    CADENA          shift and go to state 38
    BOOLEAN         shift and go to state 39
    ENTERO          shift and go to state 41
    FLOTANTE        shift and go to state 42

    comparaciones                  shift and go to state 73
    comparacion                    shift and go to state 67
    variables                      shift and go to state 68
    valor                          shift and go to state 69
    NUMERO                         shift and go to state 70

state 51

    (41) asignacion -> IDENTIFICADOR ASIGNAR valor . PUNTOCOMA

    PUNTOCOMA       shift and go to state 75


state 52

    (57) funcion -> IDENTIFICADOR ASIGNAR NAMEFUNCTION . PARENIZ parametro PARENDER PUNTOCOMA

    PARENIZ         shift and go to state 76


state 53

    (66) queue -> IDENTIFICADOR ASIGNAR NEW . QUEUE PARENIZ PARENDER PUNTOCOMA
    (68) stack -> IDENTIFICADOR ASIGNAR NEW . STACK PARENIZ PARENDER PUNTOCOMA

    QUEUE           shift and go to state 77
    STACK           shift and go to state 78


state 54

    (69) array -> IDENTIFICADOR ASIGNAR ARRAY . PARENIZ valores PARENDER PUNTOCOMA

    PARENIZ         shift and go to state 79


state 55

    (70) array -> IDENTIFICADOR ASIGNAR CORCHETEIZ . valores CORCHETEDER PUNTOCOMA
    (9) valores -> . valor
    (10) valores -> . valor COMA valores
    (13) valor -> . NUMERO
    (14) valor -> . CADENA
    (15) valor -> . BOOLEAN
    (16) valor -> . IDENTIFICADOR
    (11) NUMERO -> . ENTERO
    (12) NUMERO -> . FLOTANTE

    CADENA          shift and go to state 38
    BOOLEAN         shift and go to state 39
    IDENTIFICADOR   shift and go to state 40
    ENTERO          shift and go to state 41
    FLOTANTE        shift and go to state 42

    valores                        shift and go to state 80
    valor                          shift and go to state 36
    NUMERO                         shift and go to state 37

state 56

    (67) push -> IDENTIFICADOR FLECHASIMPLE PUSH . PARENIZ valor PARENDER PUNTOCOMA

    PARENIZ         shift and go to state 81


state 57

    (45) echo -> ECHO valores PUNTOCOMA .

    $end            reduce using rule 45 (echo -> ECHO valores PUNTOCOMA .)


state 58

    (10) valores -> valor COMA . valores
    (9) valores -> . valor
    (10) valores -> . valor COMA valores
    (13) valor -> . NUMERO
    (14) valor -> . CADENA
    (15) valor -> . BOOLEAN
    (16) valor -> . IDENTIFICADOR
    (11) NUMERO -> . ENTERO
    (12) NUMERO -> . FLOTANTE

    CADENA          shift and go to state 38
    BOOLEAN         shift and go to state 39
    IDENTIFICADOR   shift and go to state 40
    ENTERO          shift and go to state 41
    FLOTANTE        shift and go to state 42

    valor                          shift and go to state 36
    valores                        shift and go to state 82
    NUMERO                         shift and go to state 37

state 59

    (53) funcion -> FUNCTION NAMEFUNCTION PARENIZ . parametro PARENDER LLAVEIZ
    (54) parametro -> . IDENTIFICADOR
    (55) parametro -> . IDENTIFICADOR COMA parametro

    IDENTIFICADOR   shift and go to state 61

    parametro                      shift and go to state 83

state 60

    (56) funcion -> NAMEFUNCTION PARENIZ parametro . PARENDER PUNTOCOMA

    PARENDER        shift and go to state 84


state 61

    (54) parametro -> IDENTIFICADOR .
    (55) parametro -> IDENTIFICADOR . COMA parametro

    PARENDER        reduce using rule 54 (parametro -> IDENTIFICADOR .)
    COMA            shift and go to state 85


state 62

    (42) print -> PRINT PARENIZ valores . PARENDER PUNTOCOMA

    PARENDER        shift and go to state 86


state 63

    (44) print -> PRINT PARENIZ PARENDER . PUNTOCOMA

    PUNTOCOMA       shift and go to state 87


state 64

    (43) print -> PRINT valor PUNTOCOMA .

    $end            reduce using rule 43 (print -> PRINT valor PUNTOCOMA .)


state 65

    (58) return -> RETURN IDENTIFICADOR PUNTOCOMA .

    $end            reduce using rule 58 (return -> RETURN IDENTIFICADOR PUNTOCOMA .)


state 66

    (34) while -> WHILE PARENIZ comparaciones . PARENDER LLAVEIZ

    PARENDER        shift and go to state 88


state 67

    (26) comparaciones -> comparacion .
    (27) comparaciones -> comparacion . operadores comparaciones
    (38) operadores -> . OPERADOR
    (39) operadores -> . AND
    (40) operadores -> . OR

    PARENDER        reduce using rule 26 (comparaciones -> comparacion .)
    OPERADOR        shift and go to state 90
    AND             shift and go to state 91
    OR              shift and go to state 92

    operadores                     shift and go to state 89

state 68

    (28) comparacion -> variables . comparadorNum variables
    (17) comparadorNum -> . MAYORQUE
    (18) comparadorNum -> . MAYORIGUALQUE
    (19) comparadorNum -> . MENORQUE
    (20) comparadorNum -> . MENORIGUALQUE

    MAYORQUE        shift and go to state 94
    MAYORIGUALQUE   shift and go to state 95
    MENORQUE        shift and go to state 96
    MENORIGUALQUE   shift and go to state 97

    comparadorNum                  shift and go to state 93

state 69

    (29) comparacion -> valor . comparador valor
    (21) comparador -> . IDENTICO
    (22) comparador -> . NOIDENTICO
    (23) comparador -> . IGUAL

    IDENTICO        shift and go to state 99
    NOIDENTICO      shift and go to state 100
    IGUAL           shift and go to state 101

    comparador                     shift and go to state 98

state 70

    (24) variables -> NUMERO .
    (13) valor -> NUMERO .
